add sd to first stat

--- a/results.Rmd
+++ b/results.Rmd
@@ -21,7 +21,7 @@ In multi-choice trials, snowshoe hares ate an average of `r round(mean(targets$D
 
 ## Single-choice feeding trials: results by treatment
 
-We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The intake rate for Diet A was significantly higher than all other diets (p \< 0.001), while there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and NDF intake rates closest to the target intake found in the multi-choice trials Figure 2D). Diet did impact hare weight change during feeding trials (p = `r WCpval`; trial measures). Diet A caused the most weight loss (mean = `r trials[Diet == "A", round(mean(Weight_change), digits = 1)]` %/day) over the three-day feeding trial, significantly more weight loss than all other diets (Figures 3). Diet B resulted in the best outcome: slight weight increase with a mean of `r trials[Diet == "A", round(mean(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference between weight change of Diets B, C and D (Figure 3).
+We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The intake rate for Diet A was significantly higher than all other diets (p \< 0.001), while there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and NDF intake rates closest to the target intake found in the multi-choice trials Figure 2D). Diet did impact hare weight change during feeding trials (p = `r WCpval`; trial measures). Diet A caused the most weight loss (mean = `r trials[Diet == "A", round(mean(Weight_change), digits = 1)]` %/day) over the three-day feeding trial, significantly more weight loss than all other diets (Figures 3). Diet B resulted in the best outcome: slight weight increase with a mean of `r trials[Diet == "A", round(mean(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference between weight change of Diets B, C and D (Figure 3).
 
 Based on fecal composition and quantity, diet DMD differed across diets with Diet D being the most digestible and Diet A being the least (p \< 0.001; Figure 4A). Diet A had significantly lower DMD than all other diets (p \< 0.001), and Diet B was also significantly less digestible than diet D (p \< 0.01; Figure 4A). Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also differed between diets. CP digestibility increased significantly as diet CP increased from A to D (p \< 0.001; Figure 4B). Diet D had `r diffDtoAcp` times greater protein digestibility than Diet A. Diet A had the highest NDF digestibility, `r diffAtoCndf` times greater than Diet C (P \< 0.01) and `r diffAtoDndf` times greater than Diet D (P \< 0.05; Figure 4C). Diet B had `r diffBtoCndf` times the NDF digestibility of Diet C (p \< 0.01, Figure 4C).
 
