change first section to energy (prev NDF)

--- a/results.Rmd
+++ b/results.Rmd
@@ -17,7 +17,7 @@ source("Scripts/07-stats_surface.R")
 
 ## Multi-choice feeding trials
 
-In multi-choice trials, snowshoe hares ate an average of `r round(mean(targets$DMI_bw), digits = 1)` ± `r round(sd(targets$DMI_bw), digits = 1)` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on intake rate (p = `r MCpval`). Intake rate of Diet B was `r diffBtoA` times that of Diet A (p = 0.0098) and `r diffBtoD` times that of Diet D (p = 0.06). Intake rates across all diets during the multi-chocie experiment translated to average intakes of `r round(mean(targets$DMI_CP_bw), digits = 1)` ± `r round(sd(targets$DMI_CP_bw), digits = 1)` and `r round(mean(targets$DMI_NDF_bw), digits = 1)` ± `r round(sd(targets$DMI_NDF_bw), digits = 1)` g DM/kg\^0.75/day of CP and NDF, respectively (Figure 2A). When plotted in nutritional space (i.e., CP versus NDF intake rates), the average feeding response of hares fell between the nutritional rails of Diets B and C (Figure 2B). This represents an estimate of the voluntary target intake of CP and NDF for hares under these environmental conditions.
+In multi-choice trials, snowshoe hares ate an average of `r round(mean(targets$DMI_bw), digits = 1)` ± `r round(sd(targets$DMI_bw), digits = 1)` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on intake rate (p = `r MCpval`). Intake rate of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (p = 0.06). Intake rates across all diets during the multi-choice experiment translated to average intakes of `r round(mean(targets$DMI_CP_bw), digits = 1)` ± `r round(sd(targets$DMI_CP_bw), digits = 1)` g DM/kg\^0.75/day of CP and `r round(mean(targets$DMI_energy_bw), digits = 1)` ± `r round(sd(targets$DMI_energy_bw), digits = 1)` kJ/kg\^0.75/day of crude energy (Figure 2A). When plotted in nutritional space (i.e., CP versus CE intake rates), the average feeding response of hares fell between the nutritional rails of Diets B and C (Figure 2B). This represents an estimate of the voluntary target intake of CP and CE for hares under these environmental conditions.
 
 ## Single-choice feeding trials: results by treatment
 
