--- a/results.Rmd
+++ b/results.Rmd
@@ -17,74 +17,17 @@ source("Scripts/07-stats_surface.R")
 
 ## Multi-choice feeding trials
 
-In multi-choice trials, snowshoe hares ate an average of `r round(mean(targets$DMI_bw), digits = 1)` ± `r round(sd(targets$DMI_bw), digits = 1)` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on intake rate (p = `r MCpval`). Intake rate of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (p = 0.06). Intake rates across all diets during the multi-choice experiment translated to average intakes of `r round(mean(targets$DMI_CP_bw), digits = 1)` ± `r round(sd(targets$DMI_CP_bw), digits = 1)` g DM/kg\^0.75/day of CP and `r round(mean(targets$DMI_energy_bw), digits = 1)` ± `r round(sd(targets$DMI_energy_bw), digits = 1)` kJ/kg\^0.75/day of crude energy (Figure 2A). When plotted in nutritional space (i.e., CP versus CE intake rates), the average feeding response of hares fell between the nutritional rails of Diets B and C (Figure 2B). This represents an estimate of the voluntary target intake of CP and CE for hares under these environmental conditions.
+In multi-choice trials, snowshoe hares ate an average of `r round(mean(targets$DMI_bw), digits = 1)` ± `r round(sd(targets$DMI_bw)/sqrt(length(targets))), digits = 1)` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on intake rate (p = `r MCpval`). Intake rate of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (p = 0.06). Intake rates across all diets during the multi-choice experiment translated to average intakes of `r round(mean(targets$DMI_CP_bw), digits = 1)` ± `r round(sd(targets$DMI_CP_bw)/sqrt(length(targets))), digits = 1)` g DM/kg\^0.75/day of CP and `r round(mean(targets$DMI_energy_bw), digits = 1)` ± `r round(sd(targets$DMI_energy_bw)/sqrt(length(targets))), digits = 1)` kJ/kg\^0.75/day of CE (Figure 2A). When plotted in nutritional space (i.e., CP versus CE intake rates), the average feeding response of hares fell between the nutritional rails of Diets B and C (Figure 2B). This represents an estimate of the voluntary target intake of CP and CE for hares under these environmental conditions.
 
 ## Single-choice feeding trials: results by treatment
 
-We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The intake rate for Diet A was significantly higher than all other diets (p \< 0.001), whereas there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and NDF intake rates closest to the target intake found in the multi-choice trials Figure 2D). Diet exposure did affect hare weight change during single-choice feeding trials (p = `r WCpval`; trial measures). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day) over the three-day feeding trial, what was significantly more weight loss than all other diets (Figures 3). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
+We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw)/sqrt(length(trials)))` g DM/kg\^0.75/day of feed across all diets. The intake rate for Diet A was significantly higher than all other diets (p \< 0.001), whereas there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and NDF intake rates closest to the target intake found in the multi-choice trials Figure 2D). Diet exposure did affect hare weight change during single-choice feeding trials (p = `r WCpval`; trial measures). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day) over the three-day feeding trial, what was significantly more weight loss than all other diets (Figures 3). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
 
-Based on fecal composition and quantity, diet DMD differed across diets. Diet D was the most digestible and Diet A was the least (p \< 0.001; Figure 4A). Diet A had significantly lower DMD than all other diets (p \< 0.001), and Diet B was also significantly less digestible than diet D (p \< 0.01; Figure 4A). Daily CP (p \< 0.001) and NDF (p \< 0.001) digestion rates also differed between diets. CP digestibility increased significantly as diet CP increased from A to D (p \< 0.001; Figure 4B). Diet D had `r diffDtoAcp` times greater protein digestibility than Diet A. Diet A had the highest NDF digestibility, `r diffAtoCndf` times greater than Diet C (P \< 0.01) and `r diffAtoDndf` times greater than Diet D (P \< 0.05; Figure 4C). Diet B had `r diffBtoCndf` times the NDF digestibility of Diet C (p \< 0.01, Figure 4C).
+Based on fecal composition and quantity, diet DMD differed across diets. Diet D was the most digestible and Diet A was the least (p \< 0.001; Figure 4A). Diet A had significantly lower DMD than all other diets (p \< 0.001), and Diet B was also significantly less digestible than diet D (p \< 0.01; Figure 4A). CP digestibility increased significantly as diet CP increased from A to D (p \< 0.001; Figure 4B). Diet D had `r diffDtoAcp` times greater protein digestibility than Diet A.
 
 ## Single-choice feeding trials: results by nutrient intake
 
-In terms of CP and NDF, hares lost weight until protein intake reached approximately 9 g DM/kg^0.75^/day, but only when coincident with mid ranges of NDF intake, such as occurred between the rails of diets B, C, and D. Once NDF intake surpassed \~ 65 g DM/kg^0.75^/day, weight loss occurred regardless of protein intake (Figure 5A). The GAM for this surface map pattern found non-linear effects of NDF and CP on hare weight change, but not for their interaction (rsq = `r round(sumCNDF$r.sq, 2)` ; deviation explained = `r round(sumCNDF$dev.expl, 2)`; Table 2).
-
-Surface maps for intake of crude protein and energy showed a similar pattern as with protein and NDF, indicating greater protein limitation than energy limitation (Figure 5B; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2).
-
-The interaction between digestible NDF and digestible protein intake was significant and non-linear toward predicting weight loss (rsq = `r round(sumDNDF$r.sq, 2)` ; deviation explained = `r round(sumDNDF$dev.expl, 2)`; Table 2). The surface map for this model showed three "hot spots" within nutritional space where weight maintenance occurs: at two levels of DP intake when DNDF intake was under 10 g DM/kg^0.75^/day, and one area of lower DP intake but higher DNDF intake by the Diet A rail (Figure 5C).
+In terms of CE (x-axis) and CP (y-axis), hares lost weight until protein intake reached approximately 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of NDF intake, such as occurred between the rails of diets B, C, and D. Once CE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake (Figure 5A). This indicates that hares experience greater protein limitation than energy limitation (Figure 5A; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2).
 
 The surface map for digestible energy and protein intake revealed one area in the centre of the plot, between Diets B and C where weight maintenance can occur, and again at the highest levels of DP intake, toward the highest intakes on Diet D (Figure 5D). The GAM for this map showed DP intake had a significant, non-linear effect on hare weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2)
 
-![Figure 2. Feeding responses (g dry matter/kg\^0.75/day) by snowshoe hares during both the naiive multi-choice (C and D; n = 15) and the single-choice (A and B; n = 99) feeding trial experiments. Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Panels A and C show mean intake rates by diet in the multi-choice and single choice scenarios, respectively (error bars = standard deviation). Panels B and D show intake rates in nutrient space where diet rails (CP:NDF) are represented by black lines. In Panel B, black points represent the total CP and NDF intake by individuals in multi-choice trials, summing their intake of all diets. The cross point represents the mean CP and NDF intake across all hares, i.e., a potential target intake. Panel D shows mean intake rates (error bars = standard deviation) along the diet rails as CP intake against NDF intake.](Output/figures/intakebarandrail.jpeg)
-
-![Figure 3. Weight change (%/day) of snowshoe hares in response to feeding on one of four experimental diets for three days during the single-choice phase of the feeding trial experiment (n = 33). Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Boxes represent median weight change bounded by lower 25th and 75th percentiles. Points represent values of individual feeding trials.](Output/figures/weightchangebar.jpeg)
-
-![Figure 4. Dry matter digestibility (DMD), protein digestibility (DP), neutral detergent fibre digestibility (DNDF), acid detergent digestibility (DADF), and digestible energy (DE) in response to feeding on one of four experimental diets fo three days during the single-choice phase of the feeding trial experiment (n = 33). Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Boxes represent median digestibility bounded by lower 25th and 75th percentiles.](Output/figures/dietdigestion.jpeg)
-
-![Figure 5. Weight change (%/day) of snowshoe hares in response to daily intake rates (g/kg\^0.75/day) of A) digestible dry matter and B) digestible protein across all diets tested for three days during the single-choice phase of the feeding trial experiment (n = 33).](Output/figures/weightchangedigestible.jpeg)
-
-```{r}
-#surface map to show weight change in response to NDF and CP
-fitNDF <- Tps(trials[, .(DMI_NDF_bw, DMI_CP_bw)], trials$Weight_change, scale.type = "range")
-surface(fitNDF, x = "Crude NDF intake (g DM/kg^0.75/day)", 
-        y = "Crude protein intake (g DM/kg^0.75/day)")
-
-```
-
-Above: Surface maps visualizing weight change performance (%/day) in relation to crude protein and NDF intake (g DM/kg/day).
-
-```{r}
-#surface map showing weight change in response to crude energy and crude protein
-
-fitCE <- Tps(trials[, .(DMI_energy_bw, DMI_CP_bw)], trials$Weight_change, scale.type = "range")
-surface(fitCE, x = "Crude energy intake (kj/kg^0.75/day)", 
-        y = "Crude protein intake (g DM/kg^0.75/day)")
-
-```
-
-Above: Surface map visualizing weight change performance (%/day) in relation to crude energy and crude protein intake.
-
-```{r}
-#weight change in response to digestible protein and digestible NDF
-fitDNDF <- Tps(trials[, .(DNDFI, DPI)], trials$Weight_change, scale.type = "range")
-surface(fitDNDF, x = "Digestible NDF intake (g DM/kg^0.75/day)", 
-        y = "Digestible protein intake (g DM/kg^0.75/day)")
-
-```
-
-Above: Surface map visualizing weight change performance (%/day) in relation to digestible NDF and digestible protein.
-
-```{r}
-#weight change in response to digestible protein and digestible energy
-fitDE <- Tps(trials[, .(DEI, DPI)], trials$Weight_change, scale.type = "range")
-surface(fitDE, x = "Digestible energy intake (kj DM/kg^0.75/day)", 
-        y = "Digestible protein intake (g DM/kg^0.75/day)")
-
-
-```
-
-Above: Surface map visualizing weight change performance (%/day) in relation to digestible energy and digestible protein.
-
-## Additional figures
-
-![Excretion rates](Output/figures/excretionrates.jpg)
