--- a/results.Rmd
+++ b/results.Rmd
@@ -1,13 +1,16 @@
 ---
 title: "Results"
-output: word_document
+output:
+  word_document: default
+  html_document:
+    df_print: paged
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r naivetrials, include = FALSE}
+```{r all results, include = FALSE}
 
 #source the multichoice script
 source("Scripts/06-stats_treatment.R")
@@ -17,17 +20,17 @@ source("Scripts/07-stats_surface.R")
 
 ## Multi-choice feeding trials
 
-In multi-choice trials, snowshoe hares ate an average of `r round(mean(targets$DMI_bw), digits = 1)` ± `r round(sd(targets$DMI_bw)/sqrt(length(targets))), digits = 1)` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on intake rate (p = `r MCpval`). Intake rate of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (p = 0.06). Intake rates across all diets during the multi-choice experiment translated to average intakes of `r round(mean(targets$DMI_CP_bw), digits = 1)` ± `r round(sd(targets$DMI_CP_bw)/sqrt(length(targets))), digits = 1)` g DM/kg\^0.75/day of CP and `r round(mean(targets$DMI_energy_bw), digits = 1)` ± `r round(sd(targets$DMI_energy_bw)/sqrt(length(targets))), digits = 1)` kJ/kg\^0.75/day of CE (Figure 2A). When plotted in nutritional space (i.e., CP versus CE intake rates), the average feeding response of hares fell between the nutritional rails of Diets B and C (Figure 2B). This represents an estimate of the voluntary target intake of CP and CE for hares under these environmental conditions.
+In multi-choice trials, snowshoe hares ate an average of `r meanDMImc` ± `r seDMImc` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on intake rate (p = `r MCpval`). Intake rate of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (p = 0.06). Intake rates across all diets during the multi-choice experiment translated to average intakes of `r meanCPmc` ± `r seCPmc` g DM/kg\^0.75/day of CP and `r meanCEmc` ± `r seCEmc` kJ/kg\^0.75/day of CE (Figure 2A). When plotted in nutritional space (i.e., CP versus CE intake rates), the average feeding response of hares fell between the nutritional rails of Diets B and C (Figure 2B). This represents an estimate of the voluntary target intake of CP and CE for hares under these environmental conditions.
 
 ## Single-choice feeding trials: results by treatment
 
-We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw)/sqrt(length(trials)))` g DM/kg\^0.75/day of feed across all diets. The intake rate for Diet A was significantly higher than all other diets (p \< 0.001), whereas there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and NDF intake rates closest to the target intake found in the multi-choice trials Figure 2D). Diet exposure did affect hare weight change during single-choice feeding trials (p = `r WCpval`; trial measures). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day) over the three-day feeding trial, what was significantly more weight loss than all other diets (Figures 3). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
+We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw)/sqrt(length(trials)), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The intake rate for Diet A was significantly higher than all other diets (p \< 0.001), whereas there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and CE intake rates closest to the target intake found in the multi-choice trials Figure 2D). Diet exposure did affect hare weight change during single-choice feeding trials (p = `r WCpval`; trial measures). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day) over the three-day feeding trial, what was significantly more weight loss than all other diets (Figures 3). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
 
 Based on fecal composition and quantity, diet DMD differed across diets. Diet D was the most digestible and Diet A was the least (p \< 0.001; Figure 4A). Diet A had significantly lower DMD than all other diets (p \< 0.001), and Diet B was also significantly less digestible than diet D (p \< 0.01; Figure 4A). CP digestibility increased significantly as diet CP increased from A to D (p \< 0.001; Figure 4B). Diet D had `r diffDtoAcp` times greater protein digestibility than Diet A.
 
 ## Single-choice feeding trials: results by nutrient intake
 
-In terms of CE (x-axis) and CP (y-axis), hares lost weight until protein intake reached approximately 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of NDF intake, such as occurred between the rails of diets B, C, and D. Once CE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake (Figure 5A). This indicates that hares experience greater protein limitation than energy limitation (Figure 5A; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2).
+In terms of CE (x-axis) and CP (y-axis), hares lost weight until protein intake reached approximately 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of CE intake, such as occurred between the rails of diets B, C, and D. Once CE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake (Figure 5A). This indicates that hares experience greater protein limitation than energy limitation (Figure 5A; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2).
 
 The surface map for digestible energy and protein intake revealed one area in the centre of the plot, between Diets B and C where weight maintenance can occur, and again at the highest levels of DP intake, toward the highest intakes on Diet D (Figure 5D). The GAM for this map showed DP intake had a significant, non-linear effect on hare weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2)
 
