--- a/results.Rmd
+++ b/results.Rmd
@@ -20,18 +20,14 @@ source("Scripts/07-stats_surface.R")
 
 ## Multi-choice feeding trials
 
-In multi-choice trials, snowshoe hares ate an average of `r meanDMImc` ± `r seDMImc` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on intake rate (p = `r MCpval`). Intake rate of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (p = 0.06). Intake rates across all diets during the multi-choice experiment translated to average intakes of `r meanCPmc` ± `r seCPmc` g DM/kg\^0.75/day of CP and `r meanCEmc` ± `r seCEmc` kJ/kg\^0.75/day of CE (Figure 2A). When plotted in nutritional space (i.e., CP versus CE intake rates), the average feeding response of hares fell between the nutritional rails of Diets B and C (Figure 2B). This represents an estimate of the voluntary target intake of CP and CE for hares under these environmental conditions.
+In multi-choice trials, snowshoe hares ate an average of `r meanDMImc` ± `r seDMImc` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on DMI (P = `r MCpval`). DMI of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (P = 0.06). DMIs across all diets during the multi-choice experiment translated to average intakes of `r meanCPmc` ± `r seCPmc` g DM/kg\^0.75/day of CP and `r meanCEmc` ± `r seCEmc` kJ/kg\^0.75/day of GE (Figure 2A). When plotted in nutritional space, the target intake of CP and GE fell between the nutritional rails of Diets B and C (Figure 2B).
 
 ## Single-choice feeding trials: results by treatment
 
-We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw)/sqrt(length(trials)), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The intake rate for Diet A was significantly higher than all other diets (p \< 0.001), whereas there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and CE intake rates closest to the target intake found in the multi-choice trials Figure 2D). Diet exposure did affect hare weight change during single-choice feeding trials (p = `r WCpval`; trial measures). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day) over the three-day feeding trial, what was significantly more weight loss than all other diets (Figures 3). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
+Hares ate `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw)/sqrt(length(trials)), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The DMI for Diet A was significantly higher than all other diets (P \< 0.001), whereas there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and GE intake rates closest to the target intake observed in the multi-choice trials (Figure 2D). Diet affected hare weight change at the end of 3-day feeding trials (P = `r WCpval`; Figure 3). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
 
-Based on fecal composition and quantity, diet DMD differed across diets. Diet D was the most digestible and Diet A was the least (p \< 0.001; Figure 4A). Diet A had significantly lower DMD than all other diets (p \< 0.001), and Diet B was also significantly less digestible than diet D (p \< 0.01; Figure 4A). CP digestibility increased significantly as diet CP increased from A to D (p \< 0.001; Figure 4B). Diet D had `r diffDtoAcp` times greater protein digestibility than Diet A.
+Based on fecal composition and quantity, diet dry matter digestibility differed across diets. Diet D was the most digestible and Diet A was the least (P \< 0.001; Figure 4A). Diet A had significantly lower digestibility than all other diets (P \< 0.001), and Diet B was also significantly less digestible than diet D (P \< 0.01; Figure 4A). CP digestibility increased significantly as diet CP increased from A to D (P \< 0.001; Figure 4B). Diet D had `r diffDtoAcp` times greater protein digestibility than Diet A.
 
 ## Single-choice feeding trials: results by nutrient intake
 
-In terms of CE (x-axis) and CP (y-axis), hares lost weight until protein intake reached approximately 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of CE intake, such as occurred between the rails of diets B, C, and D. Once CE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake (Figure 5A). This indicates that hares experience greater protein limitation than energy limitation (Figure 5A; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2).
-
-The surface map for digestible energy and protein intake revealed one area in the centre of the plot, between Diets B and C where weight maintenance can occur, and again at the highest levels of DP intake, toward the highest intakes on Diet D (Figure 5D). The GAM for this map showed DP intake had a significant, non-linear effect on hare weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2)
-
-Based on linear regressions, our feeding trials estimated that hares require `r reqDE` kJ/kg^0.75 of DE, `r reqCP` g DM/kg^0.75 of CP, and `r reqDP` g DM/kg^0.75 of DP per day to maintain body weight. The relationship between CE intake and weight change was non-significant.
+In terms of GE (x-axis) and CP (y-axis), hares generally were able to maintain their weight when protein intake reached or exceeded approximately 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of GE intake, such as occurred between the rails of diets B, C, and D. Once GE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake. This indicates that hares experience greater protein limitation than energy limitation (Figure 5A; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2). The surface map for DE and DP intake revealed one area in the centre of the plot, between Diets B and C, where hares were able to maintain their weight, and this also occurred at the highest levels of DP intake, as exemplified by the highest intakes on Diet D (Figure 5D). The GAM for this map showed DP intake had a significant, non-linear effect on hare weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2). Based on linear regressions, our feeding trials estimated that hares require `r reqDE` kJ/kg^0.75 of DE, `r reqCP` g DM/kg^0.75 of CP, and `r reqDP` g DM/kg^0.75 of DP per day to maintain body weight. The relationship between GE intake and weight change was non-significant (P = 0.48).
