--- a/results.Rmd
+++ b/results.Rmd
@@ -13,21 +13,31 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r all results, include = FALSE}
 
 #source the multichoice script
-source("Scripts/06-stats_treatment.R")
+source("Scripts/05-stats_treatment.R")
 
 source("Scripts/07-stats_surface.R")
+
+source("Scripts/08-stats_linear.R")
 ```
+
 
 ## Multi-choice feeding trials
 
-In multi-choice trials, snowshoe hares ate an average of `r meanDMImc` ± `r seDMImc` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on DMI (P = `r MCpval`). DMI of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (P = 0.06). DMIs across all diets during the multi-choice experiment translated to average intakes of `r meanCPmc` ± `r seCPmc` g DM/kg\^0.75/day of CP and `r meanCEmc` ± `r seCEmc` kJ/kg\^0.75/day of GE (Figure 2A). When plotted in nutritional space, the target intake of CP and GE fell between the nutritional rails of Diets B and C (Figure 2B).
+In multi-choice trials, snowshoe hares ate an average of `r meanDMImc` ± `r seDMImc` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on DMI (P = `r MCpval`). DMI of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (P = 0.06; Figure 2A). DMIs across all diets during the multi-choice experiment translated to average crude intakes of `r meanCPmc` ± `r seCPmc` g DM/kg\^0.75/day of CP and `r meanCEmc` ± `r seCEmc` kJ/kg\^0.75/day of GE (Figure 2C). Average digestible intakes were `r meanDPmc` ± `r seDPmc` g DM/kg\^0.75/day of DP and `r meanDEmc` ± `r seDEmc` kJ/kg\^0.75/day of DE (Figure 2E).  When plotted in nutritional space, the target intakes of CP and GE and DP and DP fell between the nutritional rails of Diets B and C (Figure 2E, 2F).
 
-## Single-choice feeding trials: results by treatment
 
-Hares ate `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw)/sqrt(length(trials)), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The DMI for Diet A was significantly higher than all other diets (P \< 0.001), whereas there was no difference between diets B, C, and D. The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C. This pattern of intake rate resulted in hares on diets B and C having CP and GE intake rates closest to the target intake observed in the multi-choice trials (Figure 2D). Diet affected hare weight change at the end of 3-day feeding trials (P = `r WCpval`; Figure 3). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
+## No-choice feeding trials: feeding responses
+
+Hares ate `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw)/sqrt(length(trials)), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The DMI for Diet A was significantly higher than all other diets (P \< 0.001), whereas there was no difference between diets B, C, and D (Figure 2B). The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C (Figure 2B). In terms of CP and GE, no-choice intake rates curve away from the target intake rate, appearing as though on diets A and B hares aim to meet a minimum protein intake, while aiming to meet a minimum energy intake on diets C and D (Figure 2D). After converting intake rates to DP and DE, the feeding pattern changed considerably, showing hares to meet a certain energy intake (~ 900 kJ DP/kg\^0.75/day) regardless of protein (Figure 2F). On Diet A, hares could not achieve the DE intake of the other diets nor the target intake of DP observed in multi-choice trials (Figure 2F). 
+
+
+## No-choice feeding trials: weight change and digestive responses
+
+Diet affected hare weight change at the end of 3-day feeding trials (P = `r WCpval`; Figure 3). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
 
 Based on fecal composition and quantity, diet dry matter digestibility differed across diets. Diet D was the most digestible and Diet A was the least (P \< 0.001; Figure 4A). Diet A had significantly lower digestibility than all other diets (P \< 0.001), and Diet B was also significantly less digestible than diet D (P \< 0.01; Figure 4A). CP digestibility increased significantly as diet CP increased from A to D (P \< 0.001; Figure 4B). Diet D had `r diffDtoAcp` times greater protein digestibility than Diet A.
 
-## Single-choice feeding trials: results by nutrient intake
+In terms of GE (x-axis) and CP (y-axis), hares generally were able to maintain their weight when protein intake reached or exceeded approximately 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of GE intake, such as occurred between the rails of diets B, C, and D. Once GE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake. This indicates that hares experience greater protein limitation than energy limitation (Figure 5A; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2). The surface map for DE and DP intake revealed one area in the centre of the plot, between Diets B and C, where hares were able to maintain their weight, and this also occurred at the highest levels of DP intake, as exemplified by the highest intakes on Diet D (Figure 5D). The GAM for this map showed DP intake had a significant, non-linear effect on hare weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2). 
 
-In terms of GE (x-axis) and CP (y-axis), hares generally were able to maintain their weight when protein intake reached or exceeded approximately 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of GE intake, such as occurred between the rails of diets B, C, and D. Once GE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake. This indicates that hares experience greater protein limitation than energy limitation (Figure 5A; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2). The surface map for DE and DP intake revealed one area in the centre of the plot, between Diets B and C, where hares were able to maintain their weight, and this also occurred at the highest levels of DP intake, as exemplified by the highest intakes on Diet D (Figure 5D). The GAM for this map showed DP intake had a significant, non-linear effect on hare weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2). Based on linear regressions, our feeding trials estimated that hares require `r reqDE` kJ/kg^0.75 of DE, `r reqCP` g DM/kg^0.75 of CP, and `r reqDP` g DM/kg^0.75 of DP per day to maintain body weight. The relationship between GE intake and weight change was non-significant (P = 0.48).
+Based on linear regressions, our feeding trials estimated that hares require `r reqDE` kJ/kg^0.75 of DE, `r reqCP` g DM/kg^0.75 of CP, and `r reqDP` g DM/kg^0.75 of DP per day to maintain body weight (Figure 6). The relationship between GE intake and weight change was non-significant (P = `r lmGEpval`).
+
