add specifics about digestibility

--- a/results.Rmd
+++ b/results.Rmd
@@ -33,11 +33,11 @@ Hares ate `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw
 
 ## No-choice feeding trials: weight change and digestive responses
 
-Diet affected hare weight change at the end of 3-day feeding trials (P = `r WCpval`; Figure 3). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]` %/day). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]` %/day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
+Diet affected hare weight change at the end of 3-day feeding trials (P = `r WCpval`; Figure 3). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]`% per day). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]`% per day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
 
-Based on fecal composition and quantity, diet dry matter digestibility differed across diets. Diet D was the most digestible and Diet A was the least (P \< 0.001; Figure 4A). Diet A had significantly lower digestibility than all other diets (P \< 0.001), and Diet B was also significantly less digestible than diet D (P \< 0.01; Figure 4A). CP digestibility increased significantly as diet CP increased from A to D (P \< 0.001; Figure 4B). Diet D had `r diffDtoAcp` times greater protein digestibility than Diet A.
+Based on fecal composition and quantity, diet dry matter digestibility differed across diets (P \< 0.001; Figure 4A). Diet D was the most digestible (`r DMDd`) and Diet A was the least (`r DMDa`). Diet A was `r DMDdiff`% less digestible than other diets (P \< 0.001), and Diet B was `r DMDdiffBtoD`% less digestible than Diet D (P \< 0.01; Figure 4A). CP digestibility increased significantly as diet CP increased from A to D (P \< 0.001; Figure 4B). Protein in Diet A was `r CPdiga`% digestible while protein in Diet D was `r CPdigd`% digestible, `r diffDtoAcp` times greater than that of Diet A.
 
-In terms of GE (x-axis) and CP (y-axis), hares generally were able to maintain their weight when protein intake reached or exceeded approximately 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of GE intake, such as occurred between the rails of diets B, C, and D. Once GE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake. This indicates that hares experience greater protein limitation than energy limitation (Figure 5A; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2). The surface map for DE and DP intake revealed one area in the centre of the plot, between Diets B and C, where hares were able to maintain their weight, and this also occurred at the highest levels of DP intake, as exemplified by the highest intakes on Diet D (Figure 5D). The GAM for this map showed DP intake had a significant, non-linear effect on hare weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2). 
+In terms of GE (x-axis) and CP (y-axis) intake, hares generally were able to maintain their weight when protein intake reached or exceeded approximately 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of GE intake, such as occurred between the rails of diets B, C, and D. Once GE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake. This indicates that hares experience greater protein limitation than energy limitation (Figure 5A; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2). The surface map for DE and DP intake revealed one area in the centre of the plot, between Diets B and C, where hares were able to maintain their weight, and this also occurred at the highest levels of DP intake, as exemplified by the highest intakes on Diet D (Figure 5D). The GAM for this map showed DP intake had a significant, non-linear effect on hare weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2). 
 
 Based on linear regressions, our feeding trials estimated that hares require `r reqDE` kJ/kg^0.75 of DE, `r reqCP` g DM/kg^0.75 of CP, and `r reqDP` g DM/kg^0.75 of DP per day to maintain body weight (Figure 6). The relationship between GE intake and weight change was non-significant (P = `r lmGEpval`).
 
