--- a/results.Rmd
+++ b/results.Rmd
@@ -23,21 +23,21 @@ source("Scripts/08-stats_linear.R")
 
 ## Multi-choice feeding trials
 
-In multi-choice trials, snowshoe hares ate an average of `r meanDMImc` ± `r seDMImc` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on DMI (P = `r MCpval`). DMI of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (P = 0.06; Figure 2A). DMIs across all diets during the multi-choice experiment translated to average crude intakes of `r meanCPmc` ± `r seCPmc` g DM/kg\^0.75/day of CP and `r meanCEmc` ± `r seCEmc` kJ/kg\^0.75/day of GE (Figure 2C). Average digestible intakes were `r meanDPmc` ± `r seDPmc` g DM/kg\^0.75/day of DP and `r meanDEmc` ± `r seDEmc` kJ/kg\^0.75/day of DE (Figure 2E).  When plotted in nutritional space, the target intakes of CP and GE and DP and DP fell between the nutritional rails of Diets B and C (Figure 2E, 2F).
+In multi-choice trials, snowshoe hares ate an average of `r meanDMImc` ± `r seDMImc` g DM/kg\^0.75/day across all diets. There was a significant effect of diet on DMI (P = `r MCpval`). DMI of Diet B was `r diffBtoA` times that of Diet A (p = 0.01) and `r diffBtoD` times that of Diet D (P = 0.06; Figure 2A). DMIs across all diets during the multi-choice experiment translated to an average daily intake of `r meanCPmc` ± `r seCPmc` g DM/kg\^0.75/day CP and `r meanCEmc` ± `r seCEmc` kJ/kg\^0.75/day of GE (Figure 2B). Average daily intake of CP was `r meanDPmc` ± `r seDPmc` g DM/kg\^0.75/day and DE was `r meanDEmc` ± `r seDEmc` kJ/kg\^0.75/day (Figure 2C).  When plotted in nutritional space, the target intakes of CP and GE (Figure 2B) and DP and DP (Figure 2C) fell between the nutritional rails of Diets B and C.
 
 
-## No-choice feeding trials: feeding responses
+## No-choice feeding trials: intake responses
 
-Hares ate `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw)/sqrt(length(trials)), digits = 1)` g DM/kg\^0.75/day of feed across all diets. The DMI for Diet A was significantly higher than all other diets (P \< 0.001), whereas there was no difference between diets B, C, and D (Figure 2B). The greatest difference was between Diet A and C, with hares eating `r diffAtoC` times more of A than C (Figure 2B). In terms of CP and GE, no-choice intake rates curve away from the target intake rate, appearing as though on diets A and B hares aim to meet a minimum protein intake, while aiming to meet a minimum energy intake on diets C and D (Figure 2D). After converting intake rates to DP and DE, the feeding pattern changed considerably, showing hares to meet a certain energy intake (~ 900 kJ DP/kg\^0.75/day) regardless of protein (Figure 2F). On Diet A, hares could not achieve the DE intake of the other diets nor the target intake of DP observed in multi-choice trials (Figure 2F). 
+Hares ate and average of `r round(mean(trials$DMI_bw), digits = 1)`± `r round(sd(trials$DMI_bw)/sqrt(length(trials)), digits = 1)` g DM/kg\^0.75/day of feed across all diets. DMI for Diet A was significantly higher than all other diets (P \< 0.001), whereas there was no difference between diets B, C, and D (Figure 3A). Hares ate about 25% more of Diet A than other diets (Figure 3A). In terms of CP and GE, no-choice daily intakes curved away from the target intake, appearing as though on diets A and B hares aim to meet a minimum CP intake, while aiming to meet a minimum GE intake on diets C and D (Figure 3B). Using more biologically relevant metrics, DP and DE showed that hares appeared to meet a certain intake of DE (~ 900 kJ/kg\^0.75/day) regardless of DP (Figure 3C). On Diet A, hares could not achieve the DE intake of the other diets nor the target intake of DP observed in multi-choice trials (Figure 3C). 
 
 
 ## No-choice feeding trials: weight change and digestive responses
 
-Diet affected hare weight change at the end of 3-day feeding trials (P = `r WCpval`; Figure 3). Diet A caused the greatest weight loss (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]`% per day). Diet B resulted in a slight weight increase with a median of `r trials[Diet == "B", round(median(Weight_change), digits = 1)]`% per day (Figure 3). There was no difference in hare weight change when fed Diets B, C or D (Figure 3).
+Diet affected changes in hare weight between the beginning and the end of each 3-day feeding trial (P = `r WCpval`; Figure 4). Hares lost the most weight on Diet A (median = `r trials[Diet == "A", round(median(Weight_change), digits = 1)]`% per day). On averages, hares maintained weight on the other diets (Figure 4).
 
-Based on fecal composition and quantity, diet dry matter digestibility differed across diets (P \< 0.001; Figure 4A). Diet D was the most digestible (`r DMDd`) and Diet A was the least (`r DMDa`). Diet A was `r DMDdiff`% less digestible than other diets (P \< 0.001), and Diet B was `r DMDdiffBtoD`% less digestible than Diet D (P \< 0.01; Figure 4A). CP digestibility increased significantly as diet CP increased from A to D (P \< 0.001; Figure 4B). Protein in Diet A was `r CPdiga`% digestible while protein in Diet D was `r CPdigd`% digestible, `r diffDtoAcp` times greater than that of Diet A.
+Like daily intake and weight change, dry matter digestibility differed across diets (P \< 0.001; Figure 5A). Diet D was the most digestible (`r DMDd`) and Diet A was the least (`r DMDa`). Diet A was `r DMDdiff`% less digestible than other diets (P \< 0.001), and Diet B was `r DMDdiffBtoD`% less digestible than Diet D (P \< 0.01; Figure 5A). CP digestibility increased significantly as diet CP increased from A to D (P \< 0.001; Figure 5B). Protein in Diet A was `r CPdiga`% digestible while protein in Diet D was `r CPdigd`% digestible, `r diffDtoAcp` times greater than that of Diet A.
 
-In terms of GE (x-axis) and CP (y-axis) intake, hares generally were able to maintain their weight when protein intake reached or exceeded approximately 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of GE intake, such as occurred between the rails of diets B, C, and D. Once GE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake. This indicates that hares experience greater protein limitation than energy limitation (Figure 5A; rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change (Table 2). The surface map for DE and DP intake revealed one area in the centre of the plot, between Diets B and C, where hares were able to maintain their weight, and this also occurred at the highest levels of DP intake, as exemplified by the highest intakes on Diet D (Figure 5D). The GAM for this map showed DP intake had a significant, non-linear effect on hare weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2). 
+In terms of daily intake of GE (x-axis) and CP (y-axis), hares generally were able to maintain their weight when CP intake ≥ 9 g DM/kg^0.75^/day, but only when coincident with low and mid ranges of GE intake, such as occurred between the rails of diets B, C, and D. After GE intake surpassed \~ 2000 kJ/kg^0.75^/day, weight loss occurred regardless of protein intake (Figure 6A). The GAM associated with this surface map showed CP intake to have a significant, non-linear effect on weight change and GE to have no effect (rsq = `r round(sumCE$r.sq, 2)` ; deviation explained = `r round(sumCE$dev.expl, 2)`; Table 2). The surface map for DE and DP intake revealed one area in the centre of the plot, between Diets B and C, where hares were able to maintain their weight, and this also occurred at the highest levels of DP intake, as exemplified by the highest intakes on Diet D (Figure 6B). The GAM for this map showed DP intake had a significant, non-linear effect on hare weight change (rsq = `r round(sumDE$r.sq, 2)` ; deviation explained = `r round(sumDE$dev.expl, 2)`; Table 2). 
 
 Based on linear regressions, our feeding trials estimated that hares require `r reqDE` kJ/kg^0.75 of DE, `r reqCP` g DM/kg^0.75 of CP, and `r reqDP` g DM/kg^0.75 of DP per day to maintain body weight (Figure 6). The relationship between GE intake and weight change was non-significant (P = `r lmGEpval`).
 
